data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4212.wast
;; 1. **Test Description**:     Create a WebAssembly module with a nested block structure where a `call_indirect` instruction attempts to call a function. Place the `call_indirect` within the inner block and execute a `br` instruction to exit the outer block conditionally based on a function result.    **Constraint**: Verify that the correct block is exited and that the function type checking within the nested blocks is correctly handled, ensuring no traps are triggered due to type mismatches.    **Relation to Mismanagement of Block Nesting**: This test checks that the nested block structure is correctly managed, and the proper block is exited when conditions are met.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (func $f (param i32) (result i32)
      (local.get 0)
    )
    (table 1 funcref)
    (elem (i32.const 0) $f)
    (func (result i32)
      (block
        (br_if 0 (i32.eqz
          (call_indirect (type $sig) (i32.const 0) (i32.const 1))
        ))
        (i32.const 1)
      )
    )
  )
  "type mismatch or stack underflow"
)